# TensorRT-ROS-YOLOv8

./: .gitignore  LICENSE  Makefile  README.md  environment.yaml  example.env
.github/: CODEOWNERS
src/yolov8/: CMakeLists.txt  README.md  package.xml
src/yolov8/config/: yolov8.rviz
src/yolov8/images/: .gitignore
src/yolov8/launch/: debug_yolov8.launch.py  rviz2_yolov8.launch.py  yolov8.launch.py  yolov8_launch.py
src/yolov8/libs/tensorrt-cpp-api/: CMakeLists.txt  LICENSE
src/yolov8/libs/tensorrt-cpp-api/scripts/: .gitignore  build_opencv.sh  uninstall_opencv.sh
src/yolov8/libs/tensorrt-cpp-api/src/: engine.cpp  engine.h  main.cpp
src/yolov8/scripts/: .gitignore  build_cuda_opencv.sh  install_opencv.sh  uninstall_opencv.sh  unistall_cuda_opencv.sh
src/yolov8/src/: cmd_line_util.h  ros_segmentation.cpp  yolov8.cpp  yolov8.h
src/yolov8_interfaces/: CMakeLists.txt  LICENSE  package.xml
src/yolov8_interfaces/msg/: Point2D.msg  YOLOv8Obj.msg  YOLOv8Seg.msg  Yolov8BBox.msg  Yolov8Detections.msg  Yolov8SegMask.msg
tmuxp_configs/: foxglove_yolov8.yaml  rviz_yolov8.yaml
